# MHDRiemannSolver

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
demos/: demo_rj2a.py  demo_ryu_jones_2a.py
src/aegir/: __init__.py  exact_solution.py  mhd_state.py  rankine_hugoniot.py  rotational_discontinuity.py  solve_rarefaction.py  solve_shock.py
src/mhd_riemann_solver/: __init__.py  exact_solution.py  mhd_state.py  rankine_hugoniot.py  rarefaction.py  rotational_discontinuity.py  shock.py  solve_rarefaction.py  solve_shock.py
utests/: test_exact_solution.py  test_mhd_state.py  test_rotational_discontinuity.py  test_solve_rarefaction.py  test_solve_shock.py
utests/mhd_riemann_solver/: test_exact_solution.py  test_mhd_state.py  test_rarefaction.py  test_rotational_discontinuity.py  test_shock.py  test_solve_rarefaction.py  test_solve_shock.py
